--- a/64030313/8.1 Static Member.md
+++ b/64030313/8.1 Static Member.md
@@ -34,6 +34,18 @@ namespace StaticMemberExample
 }
 
 ```
+### อธิบายโค้ด
+```
+namespace StaticMemberExample:ประกาศ namespace ของโปรแกรม ซึ่งชื่อว่า StaticMemberExample
+class Cat:ประกาศคลาสชื่อ Cat โดยมี Instance Member คือตัวแปร legs กำหนดเป็น public และมีค่าเริ่มต้นเป็น 4
+class Duck: ประกาศคลาสชื่อ Duck โดยมี Static Member คือตัวแปร legs ซึ่งกำหนดเป็น public static และมีค่าเริ่มต้นเป็น 2
+internal class Program: ประกาศคลาส Program กำหนดเป็น internal สามารถเข้าถึงได้เฉพาะใน namespace เดียวกัน
+Cat cat = new Cat(): สร้าง object ชื่อ cat จากคลาส Cat โดยใช้ constructor ของ Cat
+Console.WriteLine($"Cat has {cat.legs} legs.");: แสดงข้อความบน Console ของตัวแปร legs ของ object cat ซึ่งเป็น instance member ด้วยการใช้ $-string interpolation
+Console.WriteLine($"Duck has {Duck.legs} legs");: แสดงข้อความบน Console ของตัวแปร legs ของคลาส Duck ซึ่งเป็น static member ด้วยการใช้ $-string interpolation
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115037574/235762283-0cd4ef46-858a-4aba-bcb9-2de41c9f96d3.png)
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
