--- a/64030313/8.1 Static Member.md
+++ b/64030313/8.1 Static Member.md
@@ -36,13 +36,12 @@ namespace StaticMemberExample
 ```
 ### อธิบายโค้ด
 ```
-namespace StaticMemberExample:ประกาศ namespace ของโปรแกรม ซึ่งชื่อว่า StaticMemberExample
-class Cat:ประกาศคลาสชื่อ Cat โดยมี Instance Member คือตัวแปร legs กำหนดเป็น public และมีค่าเริ่มต้นเป็น 4
-class Duck: ประกาศคลาสชื่อ Duck โดยมี Static Member คือตัวแปร legs ซึ่งกำหนดเป็น public static และมีค่าเริ่มต้นเป็น 2
-internal class Program: ประกาศคลาส Program กำหนดเป็น internal สามารถเข้าถึงได้เฉพาะใน namespace เดียวกัน
-Cat cat = new Cat(): สร้าง object ชื่อ cat จากคลาส Cat โดยใช้ constructor ของ Cat
-Console.WriteLine($"Cat has {cat.legs} legs.");: แสดงข้อความบน Console ของตัวแปร legs ของ object cat ซึ่งเป็น instance member ด้วยการใช้ $-string interpolation
-Console.WriteLine($"Duck has {Duck.legs} legs");: แสดงข้อความบน Console ของตัวแปร legs ของคลาส Duck ซึ่งเป็น static member ด้วยการใช้ $-string interpolation
+1. ประกาศคลาสชื่อ Cat โดยมี Instance Member คือตัวแปร legs กำหนดเป็น public และมีค่าเริ่มต้นเป็น 4
+2. ประกาศคลาสชื่อ Duck โดยมี Static Member คือตัวแปร legs ซึ่งกำหนดเป็น public static และมีค่าเริ่มต้นเป็น 2
+3. ประกาศคลาส Program กำหนดเป็น internal สามารถเข้าถึงได้เฉพาะใน namespace เดียวกัน
+4. สร้าง object ชื่อ cat จากคลาส Cat โดยใช้ constructor ของ Cat
+5. แสดงข้อความบน Console ของตัวแปร legs ของ object cat ซึ่งเป็น instance member ด้วยการใช้ $-string interpolation
+6. แสดงข้อความบน Console ของตัวแปร legs ของคลาส Duck ซึ่งเป็น static member ด้วยการใช้ $-string interpolation
 ```
 ### ผลการทดลอง
 ![image](https://user-images.githubusercontent.com/115037574/235762283-0cd4ef46-858a-4aba-bcb9-2de41c9f96d3.png)
@@ -81,6 +80,20 @@ namespace StaticMemberExample
 }
 
 ```
+### อธิบายโค้ด
+```
+1. ประกาศคลาส Cat ที่มี field ชื่อ legs ที่เป็น instance member และมี field ชื่อ count ที่เป็น static member และ Constructor ที่ถูกเรียกใช้ทุกครั้งที่สร้าง object ของคลาส Cat โดย count จะเพิ่มขึ้น 1 ทุกครั้งที่สร้าง object
+2. ประกาศคลาส Program โดยมีฟังก์ชัน Main เป็นฟังก์ชันหลัก โดยทำการสร้าง object ของคลาส Cat และแสดงจำนวน cat ที่มีอยู่ด้วย Console.WriteLine()
+3. สร้าง object ของคลาส Cat ชื่อ cat
+4. แสดงจำนวน cat ที่มีอยู่โดยใช้ static member variable count ของคลาส Cat
+5. สร้าง object ของคลาส Cat ชื่อ cat1 และแสดงจำนวน cat ที่มีอยู่อีกครั้ง
+6. สร้าง array ของ Cat ชื่อ catArray ขนาด 10 ตัวและแสดงจำนวน cat ที่มีอยู่อีกครั้ง
+7. ทำการสร้าง object ของคลาส Cat ในแต่ละ element ของ catArray ด้วย loop for
+8. แสดงจำนวน cat ที่มีอยู่อีกครั้งหลังจากสร้าง object ใน array ของ Cat แล้ว
+```
+
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115037574/235763926-d5c61096-aa13-43d9-a135-3baae5f1f69a.png)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
