--- a/64030313/8.1 Static Member.md
+++ b/64030313/8.1 Static Member.md
@@ -1,4 +1,4 @@
-# 8.1 Static members
+                                                                                                # 8.1 Static members
 
 Member ของ class นั้น สามารถเป็นได้ทั้งแบบ instance member และ static member 
 
@@ -138,6 +138,20 @@ namespace StaticMemberExample
     }
 }
 ```
+
+### อธิบายโค้ด
+```
+1. ประกาศคลาส Cat และการกำหนดตัวแปร legs และ count ในคลาส Cat
+2. เมทอด Cat() ที่ถูกเรียกใช้งานเมื่อสร้างอ็อบเจกต์ของคลาส Cat เพื่อเพิ่มค่า count ทีละหนึ่งเมื่อมีการสร้างอ็อบเจกต์
+3. เมทอด PrintCatCount() ที่ถูกเพิ่มเข้ามาในคลาส Cat เพื่อแสดงผลจำนวนแมวที่ถูกสร้างขึ้นมาในแต่ละครั้ง
+4. สร้างอ็อบเจกต์ Cat ชื่อ cat และเรียกใช้เมท็อด PrintCatCount() ในคลาส Cat เพื่อพิมพ์จำนวนแมวที่มีออกทางหน้าจอ
+5. สร้างอ็อบเจกต์ Cat ชื่อ cat1 และเรียกใช้เมท็อด PrintCatCount() อีกครั้งเพื่อพิมพ์จำนวนแมวที่มีใหม่ออกทางหน้าจอ โดยจะพบว่าจำนวนแมวเพิ่มขึ้นอีก 1 ตัว
+6. สร้างอาร์เรย์ catArray ที่มีขนาด 10 ตัว และเรียกใช้เมท็อด PrintCatCount() อีกครั้ง โดยจะพบว่าจำนวนแมวเพิ่มขึ้นอีก 1 ตัว ในทุก ๆ ครั้งที่สร้างอ็อบเจกต์ Cat ใหม่
+7. ใช้ลูป for เพื่อสร้างอ็อบเจกต์ Cat ในอาร์เรย์ catArray จำนวน 10 ตัว และเรียกใช้เมท็อด PrintCatCount() อีกครั้ง โดยจะพบว่าจำนวนแมวเพิ่มขึ้นเป็น 12 ตัว ซึ่งเป็นผลรวมของจำนวนแมวทั้งหมดที่สร้างขึ้น
+```
+
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115037574/235765489-2281e5de-6eb4-4415-9938-985e47aa9398.png)
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
