--- a/64030313/8.1 Static Member.md
+++ b/64030313/8.1 Static Member.md
@@ -190,6 +190,17 @@ namespace StaticMemberExample
 }
 ```
 
+### อธิบายโค้ด
+```
+1. คลาส Cat ที่ประกอบด้วยตัวแปร instance legs และตัวแปร static count โดยใน constructor ของ Cat จะทำการเพิ่มจำนวน count เมื่อมีการสร้าง object ของคลาส Cat ขึ้นมา
+2. static method PrintCatCount() ซึ่งจะตรวจสอบค่า count และแสดงผลลัพธ์ทางหน้าจอ console โดยขึ้นอยู่กับจำนวนของ object ว่าเป็น 1, มากกว่า 1 หรือไม่ถูกต้อง
+3. method Main() สร้าง object ของคลาส Cat และเรียกใช้ static method PrintCatCount() เพื่อแสดงจำนวน object ปัจจุบันของคลาส Cat บนหน้าจอ console ตามที่ได้กำหนด
+4. สร้าง object ของคลาส Cat อีก 1 ตัวและเรียกใช้ method PrintCatCount() ผ่านตัวแปร cat1 เพื่อแสดงจำนวน object ปัจจุบันของคลาส Cat บนหน้าจอ console
+```
+
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115037574/235767100-b96e72e2-3ff9-4dc0-bf16-746b01951f4d.png)
+
 
 ## คำถาม
 
