--- a/64030313/8.1 Static Member.md
+++ b/64030313/8.1 Static Member.md
@@ -205,6 +205,15 @@ namespace StaticMemberExample
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
+> ตอบ
+  - Static member
+    - เป็นตัวแปรหรือเมท็อดที่ถูกกำหนดโดยใช้คีย์เวิร์ด static นำหน้าชื่อของตัวแปรหรือเมท็อด เช่น public static int count = 0;
+    - สามารถเรียกใช้งานได้โดยไม่ต้องสร้างอินสแตนซ์ของคลาสนั้นๆ โดยใช้ชื่อคลาสตามด้วยชื่อของตัวแปรหรือเมท็อด เช่น Cat.count
+    - ทุกอินสแตนซ์ของคลาสเดียวกันที่ใช้งาน static member เดียวกันจะมีค่าเหมือนกัน และการเปลี่ยนค่าของ static member จะมีผลกับทุกอินสแตนซ์
+  - Instance member
+    - เป็นตัวแปรหรือเมท็อดที่ไม่ได้กำหนดเป็น static นำหน้าชื่อของตัวแปรหรือเมท็อด เช่น public int legs = 4;
+    - สามารถเรียกใช้งานได้เฉพาะผ่านการสร้างอินสแตนซ์ของคลาสนั้นๆ ก่อน เช่น Cat cat = new Cat(); แล้วเรียกใช้งาน instance member ด้วยการใช้ชื่ออินสแตนซ์ตามด้วยชื่อของตัวแปรหรือเมท็อด เช่น cat.legs
 
 2. สถานการณ์ใดที่ควรใช้ static member
-
+> ตอบ
+  - เมื่อต้องการให้ค่าหรือเมธอดนั้นๆ สามารถเข้าถึงได้โดยไม่ต้องสร้าง object ของ class นั้นๆ ก่อน เช่น เมื่อต้องการเก็บค่าสถิติของ class หรือเรียกใช้เมธอดที่ไม่ต้องการการเข้าถึงของตัวแปร instance ของ class นั้นๆ ในการเรียกใช้งานจะเรียกผ่านชื่อ class โดยตรง เช่น Math.PI ที่เป็น static member ของ class Math หรือ Console.WriteLine() ที่เป็นเมธอด static ของ class Console ฯลฯ
