--- a/64030313/8.2 Constant Members.md
+++ b/64030313/8.2 Constant Members.md
@@ -26,6 +26,17 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1. ประกาศตัวแปร radius และกำหนดค่าเริ่มต้นเป็น 5.0
+2. ประกาศค่าคงที่ PI และกำหนดค่าเท่ากับ 3.14159
+3. แสดงข้อความต้อนรับผู้ใช้งานและแสดงค่า radius ที่ประกาศไว้
+4. คำนวณหาพื้นที่วงกลมโดยใช้สูตร PI * r^2 และเก็บผลลัพธ์ในตัวแปร area
+5. แสดงผลลัพธ์ของการคำนวณพื้นที่วงกลมที่คำนวณไว้ในตัวแปร area โดยแสดงเป็นทศนิยม 4 ตำแหน่ง
+```
+
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235768643-8d9c0ac7-6856-42db-bc1e-9e01cc020585.png)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
