--- a/64030313/8.2 Constant Members.md
+++ b/64030313/8.2 Constant Members.md
@@ -68,6 +68,14 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1. คลาส MyCircle เมธอด PrintArea รับพารามิเตอร์ radius นำมาคำนวณหาพื้นที่ของวงกลมด้วยสูตร PI * r * r และพิมพ์ผลลัพธ์ออกทางหน้าจอ
+2. ฟังก์ชั่น Main เรียกใช้เมธอด PrintArea ด้วยการส่งค่าพารามิเตอร์ 5.0f แทนค่ารัศมีของวงกลม เพื่อคำนวณพื้นที่ของวงกลมและพิมพ์ผลลัพธ์ออกทางหน้าจอ โดยไม่ต้องใช้ตัวแปร PI เป็นค่าคงที่แล้วในฟังก์ชั่น PrintArea
+```
+
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235769206-2a2428b0-6e12-4916-aca5-257b4d12186f.png)
 
 
 ## 8.2.3 Constant in expression
