--- a/64030313/8.2 Constant Members.md
+++ b/64030313/8.2 Constant Members.md
@@ -110,6 +110,17 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1. คลาส MyCircle มี static method 2 ตัว คือ PrintArea() และ PrintCircumference() ทั้งสองรับ parameter เป็นค่ารัศมีของวงกลม (radius) และแสดงผลลัพธ์ออกทาง console โดยใช้ค่า PI และ PI2 ที่ประกาศไว้เป็น const member ของคลาส MyCircle
+2. ฟังก์ชัน PrintArea() นำค่ารัศมีของวงกลมมาคำนวณหาพื้นที่ของวงกลม แล้วแสดงผลลัพธ์ออกทาง console โดยใช้ format string "The area of circle is {area:f4} square unit." เพื่อแสดงผลลัพธ์ด้วยทศนิยม 4 ตำแหน่ง
+3. ฟังก์ชัน PrintCircumference() นำค่ารัศมีของวงกลมมาคำนวณหาเส้นรอบวงของวงกลม แล้วแสดงผลลัพธ์ออกทาง console โดยใช้ format string "The circumference of circle is {circumference:f4} square unit." เพื่อแสดงผลลัพธ์ด้วยทศนิยม 4 ตำแหน่ง
+4. ฟังก์ชัน Main() ในคลาส Program เรียกใช้ฟังก์ชัน PrintArea() และ PrintCircumference() ของคลาส MyCircle โดยส่งค่ารัศมีของวงกลมเป็น parameter แต่ละครั้ง ค่ารัศมีที่ใช้ในตัวอย่างนี้เป็น 5.0
+```
+
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235770067-b295abec-f9ad-436f-8fb1-8f08ec712a4f.png)
+
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
