--- a/64030313/8.2 Constant Members.md
+++ b/64030313/8.2 Constant Members.md
@@ -178,9 +178,17 @@ namespace ConstantMemberExample
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
+> ตอบ
+ - Local constants
+   - คือค่าคงที่ (constant) ที่ถูกประกาศภายใน method หรือ block ของโปรแกรม ซึ่งมีขอบเขตการใช้งาน (scope) จำกัดอยู่ภายใน method หรือ block นั้น ๆ เท่านั้น ซึ่งสามารถใช้งานได้เฉพาะในส่วนของ method หรือ block นั้น ๆ เท่านั้น และไม่สามารถเข้าถึงได้จากภายนอก block หรือ method นั้น ๆ
+
+ - member constants
+   - คือค่าคงที่ที่ถูกประกาศภายใน class และมีการใช้งานได้ทั่วทั้ง class ซึ่งสามารถเข้าถึงได้จากภายนอก class ด้วยการเรียกใช้ชื่อ class นั้น ๆ พร้อมกับชื่อของ constant นั้น ๆ ด้วยวิธีการเข้าถึงสมาชิก (member access) ของ class นั้น ๆ โดยใช้ dot notation.
 
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+> ตอบ
+  - ไม่สามารถเปลี่ยนค่า local constants ได้เนื่องจากเป็นค่าคงที่ (constant) ซึ่งถูกกำหนดค่าตอน compile time และไม่สามารถเปลี่ยนแปลงค่าได้ระหว่างรันโปรแกรม
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+> ตอบ
+  - Member constants ไม่สามารถเปลี่ยนค่าภายหลังได้ เนื่องจากเป็นค่าคงที่ที่ถูกกำหนดไว้แล้วในช่วง compile time และจะไม่สามารถเปลี่ยนค่าได้ใน runtime ดังนั้นถ้าต้องการเปลี่ยนค่า constant จะต้องแก้ไขโค้ดและทำการ compile ใหม่ เพื่อให้ constant มีค่าใหม่ตามที่ต้องการ
  
