--- a/64030313/8.3 Properties.md
+++ b/64030313/8.3 Properties.md
@@ -32,6 +32,9 @@ namespace PropertyExample
 }
 ```
 
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235772642-e545a4cf-a391-49ec-89b6-25b1f599b5fd.png)
+
 ## 8.3.2 เพิ่ม property
 
 รันโปรแกรมต่อไปนี้และบันทึกผล
@@ -60,6 +63,8 @@ namespace PropertyExample
 }
 ```
 
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235772720-eaa6b2ed-2f09-466c-b121-655b3db41f8c.png)
 
 ## 8.3.3  การใช้งาน getter/setter
 
@@ -90,7 +95,8 @@ namespace PropertyExample
     }
 }
 ```
-
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235772893-2476d3aa-34b0-48af-9988-51dd8a106af6.png)
 
 ## 8.3.4 properties calculation
 
@@ -117,6 +123,9 @@ namespace PropertyExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235772977-61b0a75e-8a46-4a6e-8375-842ea47dcbee.png)
+
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +155,8 @@ namespace PropertyExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235773048-913c842c-87d1-4004-8bda-e9ea8ee3cd46.png)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +197,22 @@ namespace PropertyExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235773213-3aed9aec-8256-45ba-81a8-80b6d837765e.png)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
-2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+  - Fields 
+    - คือตัวแปรที่ใช้เก็บข้อมูลภายในคลาส โดยการเข้าถึง Fields จะต้องใช้ชื่อของ Fields โดยตรง ไม่มีการคำนวณหรือประมวลผลเพิ่มเติมใดๆ ดังนั้นการอ่านและการเขียนค่าต้องทำผ่านชื่อ Fields โดยตรง
+  - Properties
+    - คือเมทอดที่ใช้เข้าถึงค่าของตัวแปร โดย Property สามารถทำงานเพิ่มเติมได้ เช่น การตรวจสอบว่าข้อมูลที่ถูกกำหนดให้กับ Properties เป็นข้อมูลที่ถูกต้องหรือไม่ หรือทำการประมวลผลข้อมูลเพิ่มเติมก่อนส่งคืนค่าให้กับ caller
+3. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
+  - Fields
+    - ใช้เมื่อต้องการเก็บค่าของตัวแปรหรือข้อมูลของ object โดยตรง โดยไม่ต้องการการเข้าถึงหรือตรวจสอบอื่นๆ ก่อน โดยที่ไม่ต้องมีการตรวจสอบความถูกต้องของค่านั้นๆ
+  - Properties
+    - ใช้เมื่อต้องการเข้าถึงหรือตั้งค่าค่าของตัวแปรหรือข้อมูลของ object โดยต้องมีการตรวจสอบความถูกต้องของค่านั้นๆ ก่อน รวมถึงสามารถทำการคำนวณค่าอื่นๆ ก่อนที่จะคืนค่าหรือตั้งค่าค่าให้กับตัวแปรหรือข้อมูลนั้นๆ ได้
 3. value ใน setter หมายถึงอะไร
-
+  - เป็น method ที่ใช้ในการกำหนดค่าของ property ดังนั้นเมื่อมีการ set ค่าให้กับ property จะมีการส่งค่าที่ต้องการ set เข้ามาผ่าน parameter ของ setter method นั้น
 4. return ใน setter ต้องมี type ตรงกับอะไร
+  - จะต้องมี type เป็น void ซึ่งแสดงว่าไม่มีการส่งค่ากลับมาจาก setter โดยทั่วไป setter จะใช้สำหรับการ set ค่าของ property โดยตรง และไม่มีการ return ค่าใดๆ กลับไปยัง caller ของ setter
