--- a/64030312/8.1 Static Member.md
+++ b/64030312/8.1 Static Member.md
@@ -34,6 +34,16 @@ namespace StaticMemberExample
 }
 
 ```
+```cs
+1.ประกาศ class Cat โดยมี Instance member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 4
+2.ประกาศ class Duck โดยมี Static member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 2
+3.ประกาศ class Program แบบ internal คือ สามารถใช้ class นี้ได้เฉพ่าะใน namespace เดียวกันเท่านั้น
+4.สร้าง Object cat จาก class Cat
+5.แสดงข้อความ Cat has 4 legs โดยเรียกใข้ผ่าน Object cat
+6.แสดงข้อความ Duck has 2 legs โดยเรียกใช้ผ่าน class Duck
+```
+![image](https://user-images.githubusercontent.com/115066208/235969249-663200de-ea17-4369-bd53-6fc22052a1dc.png)
+
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +79,19 @@ namespace StaticMemberExample
 }
 
 ```
+```cs
+1.ประกาศ class cat โดยมี Instance member แบบ public คือ legs ชนิด int ที่มีค่าคือ 4 static member แบบ public คือ count ชนิด int ที่มีค่าคือ 0 และมี constractor ที่จะเพิ่มค่า count ขึ้น 1 ทุกครั้งที่เรียกใช้หรือก็คือจะเพิ่มขึ้น 1 ทุกครั้งเมื่อสร้าง object จาก class
+2.ประกาศ class program ที่มี method main
+3.สร้าง object cat จาก class Cat
+4.แสดงค่า count จาก class Cat โดย count มีค่าเป็น 1
+5.สร้าง object cat1 จาก class Cat
+6.แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+7.สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+8.แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+9.สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+10.แสดงค่า count จาก class Cat โดย count มีค่าเป็น 12
+```
+![image](https://user-images.githubusercontent.com/115066208/235970385-5c288880-66aa-403f-b8f4-5fefb1f5c06f.png)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +136,22 @@ namespace StaticMemberExample
     }
 }
 ```
+```cs
+1.ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+2.ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+3.ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4.ประกาศ class Program ที่มี method main
+5.สร้าง object cat จาก class Cat
+6.เรียกใช้ method PrintCatCount จาก class Cat
+7.สร้าง object cat จาก class Cat
+8.เรียกใช้ method PrintCatCount จาก class Cat
+9.สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+10.เรียกใช้ method PrintCatCount จาก class Cat
+11.สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+12.เรียกใช้ method PrintCatCount จาก class Cat
+```
+![image](https://user-images.githubusercontent.com/115066208/235974565-fe4ce429-bc1c-407a-bb71-b453dd8a69de.png)
+
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +189,29 @@ namespace StaticMemberExample
     }
 }
 ```
+```cs
+1.ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+2.ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+3.ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4.ประกาศ class Program ที่มี method main
+5.สร้าง object cat จาก class Cat
+6.เรียกใช้ method PrintCatCount จาก class Cat
+7.สร้าง object cat จาก class Cat
+8.เรียกใช้ method PrintCatCount จาก class Cat โดยเรียกใช้ผ่าน ชื่อตัวแปร cat1
+```
+![image](https://user-images.githubusercontent.com/115066208/235975487-5266a298-0c0f-4c41-8200-7cfbe16b32f5.png)
+
 
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
+```cs
+Static member คือตัวแปรหรือ method ที่เพิ่ม keyword static
+instance member คือตัวแปรหรือ method ที่อยู่ในคลาส
+```
 
 2. สถานการณ์ใดที่ควรใช้ static member
-
+```cs
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class โดยไม่สร้าง object ขึ้นมาก่อน
+```
