Update 8.2 Constant Members.md

--- a/64030312/8.2 Constant Members.md
+++ b/64030312/8.2 Constant Members.md
@@ -26,6 +26,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+```cs
+1.ประกาศตัวแปร radius ชนิด double และกำหนดค่าเท่ากับ 5.0
+2.ประกาศตัวแปรคงที่ Pi ชนิด double และกำหนเค่าเท่ากับ 3.14
+3.แสดงข้อความยินดีต้อนรับ
+4.แสดงค่า radius
+5.ประกาศตัวแปร double area มีค่าคือ Pi * radius*radius
+6.แสดงค่า area
+```
+![image](https://user-images.githubusercontent.com/115066208/235980346-0e3f05d7-2085-49e0-b157-641928fddf35.png)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,7 +66,13 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+```cs
+1.ประกาศ class Mycircle
+2.ประกาศตัวแปรค่าคงที่ ชนิด double ชื่อ PI
+3.ประกาศ method PrintArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4.สร้าง class program และ method main จากนั้นก็เรียกใช้ method printarea จาก class  mycircle
+```
+![image](https://user-images.githubusercontent.com/115066208/235981178-004e2990-2cfa-4392-9647-90cbc3775d49.png)
 
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
@@ -91,6 +106,14 @@ namespace ConstantMemberExample
     }
 }
 ```
+```cs
+1.ประกาศ class mycircle
+2.ประกาตัวแปรคงที่ชนิด double ชื่อ PI และ PI2
+3.สร้าง static method printarea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4.สร้าง static method  printcircumference ที่รับค่า radius โดยประกาศตัวแปร circumference ที่มีค่าคือ PI2 * radius และแสดงผลค่า circumference ในแบบทศนิยม 4 ตำแหน่ง
+5.ประกาศ class program และ method main ที่เรียกใช้ method printarea และ printcircumference จาก class mycircle โดยส่งค่า 5.0 เป็นพารามิเตอร์ไปยัง method
+```
+![image](https://user-images.githubusercontent.com/115066208/235981858-40db02b2-97be-4c6e-b934-7ecc82593c0a.png)
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +141,7 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235982598-1685bacc-ad28-4883-befd-9b763750161f.png)
 
 ## 8.2.5 public static constant
 
@@ -143,14 +167,22 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235983289-d7a5b88f-6df8-460d-be8c-4419a0168d2c.png)
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
-
+```cs
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป็นค่าคงที่ที่ประกาศไว้ในของ method
+Member constance คือ ตัวแปรที่ถูกกกำหนดเป็นค่าตรงทีซึ่งถูกประกาศไว้ใน class
+```
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```cs
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```cs
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+```
  
