--- a/64030312/8.3 Properties.md
+++ b/64030312/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235984723-d108008d-4cbb-4988-9bb8-01b39d7c0209.png)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235985174-4e5288ff-de29-4e11-bf18-6e3ed1c418fb.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +92,9 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235985942-9ac57cd5-09ea-4fbf-bd43-df7d0c82fdfd.png)
+
+![image](https://user-images.githubusercontent.com/115066208/235986437-be3ae54b-502d-47b7-b542-912621aa75ed.png)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +122,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235986690-9b60b715-7e89-4fce-904b-bd1ed2173b74.png)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +152,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235986853-8a8ee7c6-a8f7-4698-b660-ac9707f83545.png)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +193,25 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/235987016-8c3217f2-e86a-446c-b962-8f1092746117.png)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+```cs
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลงค่าได้
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาส
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+```cs
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรง
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปร
+```
 3. value ใน setter หมายถึงอะไร
-
+```cs
+ตัวแปรพิเศษ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties ถูกเก็บไว้ใน value
+```
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```cs
+ต้องมี type เป็นชนิดเดียวกับ properties
+```
