--- a/8.3 Properties.md
+++ b/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![Screenshot 2023-05-04 002130](https://user-images.githubusercontent.com/115066186/235993002-dbb4e034-efa4-461f-b94d-a4e5dbfd60ca.png)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![Screenshot 2023-05-04 003523](https://user-images.githubusercontent.com/115066186/235998850-d6bb5496-9c68-4eed-9e91-a96f644009e2.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,7 +92,38 @@ namespace PropertyExample
     }
 }
 ```
+![Screenshot 2023-05-04 003637](https://user-images.githubusercontent.com/115066186/235999188-75ba9699-31d7-4fa5-8345-45749594c7fc.png)
 
+Error เพราะ ไม่สามารถเรียกใช้ get และ set ในฐานะ method ได้ สามรถเรียกใช้ได้ เช่น 
+Garfield.Age = 5;
+int catAge = Garfield.Age;
+
+using System.Drawing;
+namespace PropertyExample
+{
+
+    class Cat
+    {
+        public int Age { get; set; }
+        public Color SkinColor { get; set; }
+
+    }
+    internal class Program
+    {
+        static void Main(string[] args)
+        {
+            var Garfield = new Cat();
+            // callint setter
+            Garfield.Age = 5;
+
+            // calling getter
+            int catAge = Garfield.Age;
+            Console.WriteLine(catAge);
+        }
+    }
+}
+
+![Screenshot 2023-05-04 003729](https://user-images.githubusercontent.com/115066186/235999538-918de685-9664-4e33-8cfe-86f63417aee0.png)
 
 ## 8.3.4 properties calculation
 
@@ -117,6 +150,7 @@ namespace PropertyExample
     }
 }
 ```
+![Screenshot 2023-05-04 003824](https://user-images.githubusercontent.com/115066186/235999688-8c558646-7ea6-4341-976c-f74472355e52.png)
 
 ## 8.3.5 properties calculation
 
@@ -145,7 +179,8 @@ namespace PropertyExample
         }
     }
 }
-```
+```![Screenshot 2023-05-04 003908](https://user-images.githubusercontent.com/115066186/235999853-f555d937-143c-484e-8366-4df65e3ee656.png)
+
 
 ## 8.3.6 properties calculation
 
@@ -185,14 +220,18 @@ namespace PropertyExample
         }
     }
 }
-```
+```![Screenshot 2023-05-04 003956](https://user-images.githubusercontent.com/115066186/236000024-2c2f5761-5c33-494a-b09d-f7f04baba5cd.png)
+
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลค่าได้ซึ่งถูกประกาศในคลาสเพื่อเก็บข้อมูล
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาสโดยไม่ต้องเขียน method โดยตะใช้ท method getter and setter ที่มีอยู่แล้วมาใช้สำหรับอ่านและเขียนข้อมูลของตัวแปร
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรงที่ไม่ต้องการการเข้าถึงและไม่ต้องการการตรวจสอบความถูกต้องของข้อมูล
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปรโดยต้อบงการให้มีการตรวจสอบความถูกต้องของข้อมูลที่รับเข้ามา และใช้ในตอนที่ต้องการคำนวณค่าข้อมูลเพื่อเก็บลงในคัวแปรโดยที่ไม่ต้องเขียน method เพื่อคำนวณค่า
 3. value ใน setter หมายถึงอะไร
-
+ตัวแปรพิเศษของ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties จะถูกเก็บไว้ที่ value ก่อนนั่นเอง
 4. return ใน setter ต้องมี type ตรงกับอะไร
+ต้องมี type เป็นชนิดเดียวกับ properties
