Update 8.1 Static Member.md

--- a/64030090/Labs/8.1 Static Member.md
+++ b/64030090/Labs/8.1 Static Member.md
@@ -34,6 +34,17 @@ namespace StaticMemberExample
 }
 
 ```
+```
+ประกาศ class Cat โดยมี Instance member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 4
+ประกาศ class Duck โดยมี Static member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 2
+ประกาศ class Program แบบ internal คือ สามารถใช้ class นี้ได้เฉพ่าะใน namespace เดียวกันเท่านั้น
+สร้าง Obj จาก class Cat
+แสดงข้อความ Cat has 4 legs โดยเรียกใข้ผ่าน Obj cat
+แสดงข้อความ Duck has 2 legs โดยเรียกใช้ผ่าน class Duck
+```
+
+![image](https://user-images.githubusercontent.com/115066356/236388922-cdea8066-ebba-437e-a9ab-a89ee9dd1ca7.png)
+
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +80,21 @@ namespace StaticMemberExample
 }
 
 ```
+```
+ประกาศ class cat โดยมี Instance member แบบ public คือ legs ชนิด int ที่มีค่าคือ 4 static member แบบ public คือ count ชนิด int ที่มีค่าคือ 0 และมี constractor ที่จะเพิ่มค่า count ขึ้น 1 ทุกครั้งที่เรียกใช้หรือก็คือจะเพิ่มขึ้น 1 ทุกครั้งเมื่อสร้าง object จาก class
+ประกาศ class program ที่มี method main
+สร้าง object cat จาก class Cat
+แสดงค่า count จาก class Cat โดย count มีค่าเป็น 1
+สร้าง object cat1 จาก class Cat
+แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+แสดงค่า count จาก class Cat โดย count มีค่าเป็น 12
+```
+
+![image](https://user-images.githubusercontent.com/115066356/236389307-f6f467bb-78af-4ad5-b7b6-03942980b395.png)
+
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +139,23 @@ namespace StaticMemberExample
     }
 }
 ```
+```
+ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+ประกาศ class Program ที่มี method main
+สร้าง object cat จาก class Cat
+เรียกใช้ method PrintCatCount จาก class Cat
+สร้าง object cat จาก class Cat
+เรียกใช้ method PrintCatCount จาก class Cat
+สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+เรียกใช้ method PrintCatCount จาก class Cat
+สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+เรียกใช้ method PrintCatCount จาก class Cat
+```
+
+![image](https://user-images.githubusercontent.com/115066356/236389523-51936910-c4f2-4359-b3fc-4a0dce9674ae.png)
+
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +193,29 @@ namespace StaticMemberExample
     }
 }
 ```
+```
+ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+ประกาศ class Program ที่มี method main
+สร้าง object cat จาก class Cat
+เรียกใช้ method PrintCatCount จาก class Cat
+สร้าง object cat จาก class Cat
+เรียกใช้ method PrintCatCount จาก class Cat โดยเรียกใช้ผ่าน ชื่อตัวแปร cat1
+```
+![image](https://user-images.githubusercontent.com/115066356/236389738-f98b3054-5aa2-46c8-8aeb-1d4ee7ba7d17.png)
+
 
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
-
+```
+Static member คือตัวแปรหรือ method ที่เพิ่ม keyword static
+instance member คือตัวแปรหรือ method ที่อยู่ในคลาส
+```
 2. สถานการณ์ใดที่ควรใช้ static member
+```
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class โดยไม่สร้าง object ขึ้นมาก่อน
+```
 
