Update 8.2 Constant Members.md

--- a/64030090/Labs/8.2 Constant Members.md
+++ b/64030090/Labs/8.2 Constant Members.md
@@ -26,6 +26,16 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1.ประกาศตัวแปร radius ชนิด double และกำหนดค่าเท่ากับ 5.0
+2.ประกาศตัวแปรคงที่ Pi ชนิด double และกำหนเค่าเท่ากับ 3.14
+3.แสดงข้อความยินดีต้อนรับ
+4.แสดงค่า radius
+5.ประกาศตัวแปร double area มีค่าคือ Pi * radius*radius
+6.แสดงค่า area
+```
+
+![image](https://user-images.githubusercontent.com/115066356/236390499-cda0d8c4-a045-463a-9079-fc6ca173ad78.png)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,6 +67,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1.ประกาศ class Mycircle
+2.ประกาศตัวแปรค่าคงที่ ชนิด double ชื่อ PI
+3.ประกาศ method PrintArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4.สร้าง class program และ method main จากนั้นก็เรียกใช้ method printarea จาก class  mycircle
+```
+![image](https://user-images.githubusercontent.com/115066356/236390784-87d06c80-b1c7-4ef4-b02f-cc5f3845fd59.png)
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +108,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1.ประกาศ class mycircle
+2.ประกาตัวแปรคงที่ชนิด double ชื่อ PI และ PI2
+3.สร้าง static method printarea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4.สร้าง static method  printcircumference ที่รับค่า radius โดยประกาศตัวแปร circumference ที่มีค่าคือ PI2 * radius และแสดงผลค่า circumference ในแบบทศนิยม 4 ตำแหน่ง
+5.ประกาศ class program และ method main ที่เรียกใช้ method printarea และ printcircumference จาก class mycircle โดยส่งค่า 5.0 เป็นพารามิเตอร์ไปยัง method
+```
+![image](https://user-images.githubusercontent.com/115066356/236393941-3dbe64fa-cc1d-4044-8df4-d2c9dfe7d63c.png)
+
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +144,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236394550-71ede66b-ca7b-4e4f-b332-cd2522b83df8.png)
+
 
 ## 8.2.5 public static constant
 
@@ -143,14 +171,24 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236394959-b023eda5-f49b-4e13-a15f-f7e6d3b93a28.png)
+
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
+```
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป็นค่าคงที่ที่ประกาศไว้ในของ method
+Member constance คือ ตัวแปรที่ถูกกกำหนดเป็นค่าตรงทีซึ่งถูกประกาศไว้ใน class
+```
 
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+```
  
