--- a/64030090/Labs/8.3 Properties.md
+++ b/64030090/Labs/8.3 Properties.md
@@ -31,6 +31,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236395377-2140f5d5-5fa1-43e8-90fe-9e0912847ccb.png)
+
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +61,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236395502-db92f678-20bf-44c5-986d-d46bd93b974f.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +93,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236395931-992710e8-ad49-4ce1-8379-ab54c7163374.png)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +121,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236396086-7ef9cd94-aec9-49ec-881e-173f242fd46c.png)
+
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +152,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236396239-2a9103cf-4473-459f-a7a4-fa07a44ba17f.png)
+
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +194,25 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236396359-360f373b-d784-48e7-896f-53fccb72bc6b.png)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+```
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลงค่าได้
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาส
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+```
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรง
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปร
+```
 3. value ใน setter หมายถึงอะไร
-
+```
+ตัวแปรพิเศษ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties ถูกเก็บไว้ใน value
+```
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```
+ต้องมี type เป็นชนิดเดียวกับ properties
+```
