Update 8.1 Static Member.md

--- a/059/Labs/8.1 Static Member.md
+++ b/059/Labs/8.1 Static Member.md
@@ -34,6 +34,9 @@ namespace StaticMemberExample
 }
 
 ```
+### อธิบายและการทำงาน
+![image](https://user-images.githubusercontent.com/100436724/236519200-dfe068c7-4566-4802-8f4b-fffb5d6146a4.png)
+
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +72,10 @@ namespace StaticMemberExample
 }
 
 ```
+### อธิบายและการทำงาน
+
+![image](https://user-images.githubusercontent.com/100436724/236521462-151ec75a-c762-4e94-ac4c-cd367a5079b4.png)
+
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +120,9 @@ namespace StaticMemberExample
     }
 }
 ```
+### อธิบายและการทำงาน
+![image](https://user-images.githubusercontent.com/100436724/236527942-3cc07ef5-8ff7-450f-a055-e5a9ad5dc1fc.png)
+
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +160,21 @@ namespace StaticMemberExample
     }
 }
 ```
+### อธิบายและการทำงาน
+![image](https://user-images.githubusercontent.com/100436724/236531797-e64c7514-e80b-43f0-b831-374a2b7056ca.png)
 
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
-
+```
+static member เป็น member ที่เป็นของ class โดยตรง ไม่ได้ขึ้นอยู่กับ object แต่ instance member จะเป็น member 
+ที่ขึ้นอยู่กับแต่ละ object ของ class ที่ถูกสร้างขึ้นมา โดยสามารถเข้าถึงผ่าน object ของ class นั้นๆ ได้
+```
 2. สถานการณ์ใดที่ควรใช้ static member
-
+```
+Static member เหมาะสำหรับใช้ในสถานการณ์ที่ต้องการเก็บข้อมูลแบบ global หรือเป็นตัวช่วยในการทำงานของ class 
+โดยที่ไม่ต้องการสร้าง object ของ class ใหม่เพื่อเรียกใช้งาน method หรือ property ของ class นั้นๆ 
+โดยสามารถใช้ static member เพื่อเก็บค่าคงที่ (constant) หรือเพื่อเรียกใช้ method ที่มีการเปลี่ยนแปลงตามเงื่อนไขต่างๆ 
+หรือเพื่อนำไปใช้กับเครื่องมือหรือโมดูลต่างๆ ในการพัฒนาซอฟต์แวร์โดยทั่วไป
+```
