Update 8.1 Static Member.md

--- a/64030301 watcharaporn/8.1 Static Member.md
+++ b/64030301 watcharaporn/8.1 Static Member.md
@@ -34,6 +34,21 @@ namespace StaticMemberExample
 }
 
 ```
+### อธิบายโค้ด
+```
+1.ประกาศ class Cat ที่มีสมาชิกตัวแปร legs ที่เป็น public และมีค่าเท่ากับ 4 
+2.ประกาศ class Duck ที่มีสมาชิกตัวแปร legs ที่เป็น static และมีค่าเท่ากับ 2
+3.ประกาศตัวแปร cat ชนิด Cat และกำหนดค่าเริ่มต้นเป็น new Cat()
+4.แสดงผลลัพธ์บนหน้าจอด้วย Console.WriteLine() โดยแสดงข้อความ "Cat has {cat.legs} legs."
+5.โดยใช้ตัวแปร legs ของ cat ซึ่งเป็น instance member
+6.แสดงผลลัพธ์บนหน้าจอด้วย Console.WriteLine() โดยแสดงข้อความ "Duck has {Duck.legs} legs"
+7.โดยใช้ตัวแปร legs ของ Duck ซึ่งเป็น static member
+```
+
+### ผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/115066329/236520645-6c802335-b643-480a-8302-18c4a1f58300.png)
+
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +84,20 @@ namespace StaticMemberExample
 }
 
 ```
+### อธิบายโค้ด
+```
+1.ประกาศคลาส Cat ที่มีสมาชิกตัวแปร legs และ count ทั้งคู่เป็นตัวแปร public
+2.count เป็น static ซึ่งจะนับจำนวนของอ็อบเจกต์ของ Cat ที่ถูกสร้างขึ้นมา
+3.ประกาศฟังก์ชันสร้าง Cat() ซึ่งจะถูกเรียกเมื่อสร้างอ็อบเจกต์ของ Cat และทำการเพิ่มจำนวน count
+4.สร้างอ็อบเจกต์ cat ของคลาส Cat และแสดงจำนวนแมวที่ถูกสร้างขึ้นมาทั้งหมดในแต่ละครั้ง
+5.สร้างอ็อบเจกต์ cat1 ของคลาส Cat และแสดงจำนวนแมวที่ถูกสร้างขึ้นมาทั้งหมดในแต่ละครั้ง
+6.สร้างอาร์เรย์ catArray ของคลาส Cat และแสดงจำนวน แมวที่ถูกสร้างขึ้นมาทั้งหมดในแต่ละครั้ง
+7.ใช้ลูป for เพื่อสร้างอ็อบเจกต์ของ Cat และเพิ่ม count ตามจำนวนอาร์เรย์ที่กำหนด
+8.แสดงจำนวนแมวที่ถูกสร้างขึ้นมาทั้งหมด
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236521007-92be4470-203b-4775-9d31-d06ee717fd5e.png)
+
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +142,32 @@ namespace StaticMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1.สร้างคลาส Cat
+2.กำหนดฟิลด์ legs โดยกำหนดค่าเริ่มต้นเป็น 4
+3.กำหนดฟิลด์ count โดยกำหนดค่าเริ่มต้นเป็น 0 
+4.สร้าง Constructor ของคลาส Cat
+5.เพิ่มค่า count ทุกครั้งที่สร้างอ็อบเจกต์ Cat ใหม่
+6.สร้างเมธอด static ชื่อ PrintCatCount
+7.พิมพ์จำนวนแมวที่ถูกสร้างขึ้น (กรณีมีแค่ 1 ตัว)
+8. พิมพ์จำนวนแมวที่ถูกสร้างขึ้น (กรณีมีมากกว่า 1 ตัว)
+9.พิมพ์ข้อความว่า Invalid number of cats ถ้าไม่มีแมวเลย
+10.สร้างคลาส Program
+11.สร้างเมธอด
+12.สร้าง object แมวตัวแรก
+13.พิมพ์จำนวนแมวที่มีอยู่ในโปรแกรม
+14.สร้าง object แมวตัวที่สอง
+15.พิมพ์จำนวนแมวที่มีอยู่ในโปรแกรม
+16. สร้าง array ของแมว 10 ตัว
+17.พิมพ์จำนวนแมวที่มีอยู่ในโปรแกรม
+18.วนลูปเพื่อสร้างแมวตามจำนวนของ array
+19. สร้างออบเจ็กต์ของคลาส Cat เพิ่มอีก 10 ตัว
+20.พิมพ์จำนวนแมว 
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236522332-a27f629b-c3a2-40e8-9924-49435edf6c57.png)
+
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +205,48 @@ namespace StaticMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1.สร้าง class ชื่อ Cat
+2.attribute สำหรับเก็บจำนวนขาของแมว
+3.static member ชื่อ count เพื่อเก็บจำนวนแมวที่ถูกสร้างขึ้นมา
+4.constructor ของ class เพื่อเพิ่มจำนวน count เมื่อมีการสร้าง object ของ class นี้
+5.static method ชื่อ PrintCatCount() เพื่อแสดงผลจำนวนแมวที่ถูกสร้างขึ้นมา
+6.พิมพ์จำนวนแมวที่ถูกสร้างขึ้น (กรณีมีแค่ 1 ตัว)
+7. พิมพ์จำนวนแมวที่ถูกสร้างขึ้น (กรณีมีมากกว่า 1 ตัว)
+8.พิมพ์ข้อความว่า Invalid number of cats ถ้าไม่มีแมวเลย
+9.สร้าง object ของ class Cat ขึ้นมา 1 ตัว
+10.เรียกใช้งาน static method PrintCatCount() เพื่อแสดงผลจำนวนแมวที่ถูกสร้างขึ้นมา
+11. สร้าง object ของ class Cat ขึ้นมาอีก 1 ตัว
+12.เรียกใช้งาน static method PrintCatCount() เพื่อแสดงผลจำนวนแมวที่ถูกสร้างขึ้นมา
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236523586-b7ffdc29-3bb9-48e3-b7a8-6ad5ff7789fd.png)
 
 
-## คำถาม
+### คำถาม
 
-1. Static member ต่างจาก instance member  อย่างไร
-
-2. สถานการณ์ใดที่ควรใช้ static member
-
+## 1. Static member ต่างจาก instance member  อย่างไร
+```
+1.การเข้าถึง:
+Static member สามารถเข้าถึงได้โดยไม่จำเป็นต้องสร้าง instance ของคลาสก่อน โดยเรียกใช้ผ่านชื่อคลาสตัวแปร (class name variable) หรือ (class name function)
+Instance member ต้องถูกเรียกผ่าน instance ของคลาสเสมอ โดยใช้ชื่อตัวแปร instance ในการเข้าถึง
+2.การแบ่งแยกพื้นที่หน่วยความจำ:
+Static member จะถูกเก็บในหน่วยความจำส่วนของคลาส ทำให้ถูกแบ่งแยกจาก instance ทั้งหมด
+Instance member จะถูกเก็บในหน่วยความจำของ instance เมื่อสร้างขึ้น และแยกจาก instance อื่นๆ
+3.การแชร์ค่า:
+Static member จะแชร์ค่าเดียวกันในคลาสทั้งหมด โดยสามารถเปลี่ยนแปลงค่าได้ทุกที่ในโปรแกรม
+Instance member จะมีค่าแตกต่างกันในแต่ละ instance และไม่สามารถเปลี่ยนแปลงค่าใน instance อื่นๆ ได้
+4.การเรียกใช้งาน:
+Static member จะถูกโหลดเข้ามาแค่ครั้งเดียวเมื่อโปรแกรมเริ่มต้น และอยู่ในหน่วยความจำตลอดระยะเวลาการทำงานของโปรแกรม
+Instance member จะถูกโหลดเมื่อมีการสร้าง instance ของคลาส และจะถูกทำลาย
+```
+## 2. สถานการณ์ใดที่ควรใช้ static member
+```
+Static member เหมาะสำหรับใช้งานในสถานการณ์ที่ต้องการเก็บค่าที่แชร์กันในคลาสทั้งหมด โดยไม่จำเป็นต้องสร้าง instance ของคลาสก่อน  ได้แก่
+1.การเก็บข้อมูลที่ใช้ร่วมกันในคลาส
+2.การสร้างฟังก์ชันที่ใช้งานได้ทั่วคลาส
+3.การเรียกใช้งานค่าคงที่ที่ต้องการใช้งานในหลายๆที่
+4.การเข้าถึงข้อมูลภายนอกโดยไม่ต้องสร้าง instance
+5.การสร้างเมท็อดที่ไม่มีผลกับ instance
+```
