Update 8.2 Constant Members.md

--- a/64030301 watcharaporn/8.2 Constant Members.md
+++ b/64030301 watcharaporn/8.2 Constant Members.md
@@ -26,7 +26,17 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+### อธิบายโค้ด
+```
+1.กำหนดค่ารัศมีของวงกลมเป็น 5.0
+2.กำหนดค่าคงที่ PI เป็น 3.14159
+3.แสดงข้อความต้อนรับผู้ใช้
+4.แสดงค่ารัศมีของวงกลมที่ผู้ใช้ป้อนเข้ามา
+5.คำนวณพื้นที่วงกลมจากค่ารัศมีและค่าคงที่ PI
+6.แสดงค่าพื้นที่วงกลมที่คำนวณได้
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236537292-b452aafe-e655-47bb-a07c-5d0ed2e3a562.png)
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -57,6 +67,19 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1.ประกาศคลาส MyCircle
+2.ประกาศค่าคงที่ PI โดยให้มีค่าเท่ากับ 3.14159
+3.สร้างเมทอดสำหรับการพิมพ์พื้นที่ของวงกลมโดยมีพารามิเตอร์เป็นรัศมีของวงกลม
+4.คำนวณหาพื้นที่ของวงกลมจากสูตร พิมพ์ทางคณิตศาสตร์
+5.พิมพ์ผลลัพธ์ที่ได้ลงบนหน้าจอ
+6.ประกาศคลาส Program ซึ่งเป็นหน้าที่ในการรันโปรแกรม
+7.เมทอด Main ซึ่งจะถูกเรียกใช้งานเมื่อโปรแกรมถูกรัน
+8.เรียกใช้เมทอด Printarea ของคลาส MyCircle เพื่อคำนวณหาพื้นที่ของวงกลมที่มีรัศมีเท่ากับ 5
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236538075-2630d22e-18c5-4f5d-832a-743e51f19e78.png)
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +114,20 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1.ประกาศคลาส MyCircle
+2.ประกาศค่าคงที่ PI และ PI2
+3.ประกาศเมทอด PrintArea เพื่อคำนวณพื้นที่วงกลม
+4.คำนวณพื้นที่วงกลม
+5.แสดงผลลัพธ์
+6.ประกาศเมทอด PrintCircumference เพื่อคำนวณเส้นรอบวง
+7.คำนวณเส้นรอบวง
+8.ประกาศคลาส Program สำหรับรันโปรแกรม
+9.เรียกใช้งานเมทอด PrintArea และ PrintCircumference ของคลาส MyCircle โดยส่งค่ารัศมีของวงกลมเข้าไปในพารามิเตอร์
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236538203-f085de6e-b5c1-4fcf-adcf-d447ceca09eb.png)
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +155,20 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายโค้ด
+```
+1.ประกาศคลาส MyCircle
+2.ประกาศค่าคงที่ PI และกำหนดค่าเป็น 3.14159
+3.ประกาศเมทอด PrintArea ที่รับพารามิเตอร์เป็นรัศมีของวงกลม
+4.คำนวณหาพื้นที่วงกลมจากรัศมีที่รับเข้ามา
+5.พิมพ์ผลลัพธ์ออกทางหน้าจอ
+6.เปลี่ยนค่าของค่าคงที่ PI ให้เป็นค่าคงที่ PI จากคลาส Math
+7.ประกาศคลาส Program ที่ใช้เป็นคลาสหลัก
+8.ประกาศเมทอด Main ที่เป็นเมทอดหลักของโปรแกรม
+9.เรียกใช้เมทอด PrintArea ในคลาส MyCircle และส่งค่ารัศมีเป็น 5.0
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236539079-be97f4eb-a0f8-4c8b-b264-45c0a1aed693.png)
 
 ## 8.2.5 public static constant
 
@@ -143,14 +194,53 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+### อธิบายโค้ด
+```
+1.ประกาศคลาส MyCircle
+2.ประกาศค่าคงที่ PI และกำหนดค่าเป็น 3.14159
+3.ประกาศเมทอด PrintArea ที่รับพารามิเตอร์เป็นรัศมีของวงกลม
+4.คำนวณหาพื้นที่วงกลมจากรัศมีที่รับเข้ามา
+5.พิมพ์ผลลัพธ์ออกทางหน้าจอ
+6.ประกาศคลาส Program ที่ใช้เป็นคลาสหลัก
+7.ประกาศเมทอด Main ที่เป็นเมทอดหลักของโปรแกรม
+8.เรียกใช้เมทอด PrintArea ในคลาส MyCircle และส่งค่ารัศมีเป็น 5.0
+```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236539551-3fcd53b9-a39b-4ee4-94eb-bd2c15d861a8.png)
 
 ## คำถาม
 
-1. Local constants ต่างจาก member constants อย่างไร
+## 1. Local constants ต่างจาก member constants อย่างไร
+```
+1.ตำแหน่งของการประกาศ
+-Local constants เป็นค่าคงที่ที่ประกาศภายใน method หรือ block ของโค้ด
+-Member constants เป็นค่าคงที่ที่ประกาศเป็น static member ของคลาส ซึ่งสามารถเข้าถึงได้โดยตรงผ่านชื่อคลาส
+2.การเข้าถึง
+-Local constants เป็น private ในขอบเขตของ block หรือ method ที่ประกาศ เหมือนกับตัวแปร local ธรรมดา ซึ่งไม่สามารถเข้าถึงจากภายนอก block หรือ method นั้น ๆ ได้
+-Member constants เป็น public และสามารถเข้าถึงได้จากทุกที่ในคลาสที่ประกาศ
+3.การใช้งาน
+-Local constants เป็นค่าคงที่ที่ใช้งานได้ภายใน block หรือ method ที่ประกาศเท่านั้น ซึ่งจะถูกสร้างขึ้นเมื่อโปรแกรมทำงานผ่าน block หรือ method นั้น ๆ และจะถูกทำลายเมื่อโปรแกรมออกจาก block หรือ method นั้น ๆ
+-Member constants เป็นค่าคงที่ที่ใช้งานได้ในทุกๆ method ของคลาส โดยไม่จำเป็นต้องสร้าง instance ของคลาสก่อน และจะถูกสร้างขึ้นเมื่อโปรแกรมเริ่มทำงาน และจะยังคงอยู่ในหน่วยความจำจนถึงโปรแกรมปิด
+4.การแก้ไขค่า
+-Local constants ไม่สามารถแก้ไขค่าได้ เมื่อค่าถูกกำหนดครั้งแรก ค่าจะไม่สามารถเปลี่ยนแปลงได้ตลอดระยะเวลาที่โปรแกรมทำงานใน -block หรือ method นั้น ๆ
+-Member constants ไม่สามารถเปลี่ยนแปลงค่าได้ เมื่อค่าถูกกำหนดครั้งแรก ค่าจะคงที่ตลอดระยะเวลาที่โปรแกรมทำงาน และไม่สามารถเปลี่ยนแปลงได้ทั้งหมด
+5.การใช้งานในกรณีต่างๆ
+-Local constants ใช้เพื่อระบุค่าคงที่ที่ใช้งานภายใน block หรือ method นั้น ๆ ซึ่งสามารถเปลี่ยนแปลงค่าตามเงื่อนไขที่ต้องการได้
+-Member constants ใช้เพื่อระบุค่าคงที่ที่ใช้งานได้ทุกที่ในคลาส โดยสามารถเข้าถึงได้โดยไม่ต้องสร้าง instance ของคลาสก่อน และสามารถใช้งานได้ในทุก method ของคลาส โดยไม่มีการเปลี่ยนแปลงค่า
+```
 
-2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+## 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+```
+Local constants ไม่สามารถเปลี่ยนค่าภายหลังได้ ค่าจะถูกกำหนดครั้งแรกและคงที่ตลอดระยะเวลาที่โปรแกรมทำงานใน block หรือ method นั้น ๆ 
+ดังนั้นหากมีการเปลี่ยนแปลงค่าของ local constants ภายหลังการกำหนดค่าครั้งแรก จะทำให้เกิดข้อผิดพลาดในการทำงานของโปรแกรมได้ 
+ดังนั้นถ้าต้องการเปลี่ยนแปลงค่าใน Local constants จะต้องประกาศใหม่ในส่วนที่ต้องการใช้งานใหม่อีกครั้ง โดยค่าเดิมที่กำหนดไว้จะไม่มีผลใด ๆ กับการทำงานของโปรแกรม
+```
 
-3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+## 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+```
+Member constants ไม่สามารถเปลี่ยนค่าภายหลังได้ เนื่องจากค่าของ member constants ถูกกำหนดค่าคงที่เมื่อคอมไพล์โค้ดและไม่สามารถเปลี่ยนแปลงได้โดยตรง
+ในระหว่างรันไทม์ หากพยายามเปลี่ยนแปลงค่าของ member constants จะทำให้เกิดข้อผิดพลาด (error) ขณะรันโปรแกรม ดังนั้น ถ้าต้องการเปลี่ยนแปลงค่าของ member constants 
+จะต้องทำการแก้ไขโค้ดและคอมไพล์ใหม่เพื่อกำหนดค่าใหม่ให้กับ member constants นั้น ๆ ก่อนการรันโปรแกรมใหม่
+```
 
  
